build/log/idf_py_stdout_output_55819
[1/12] Performing build step for 'bootloader'
[1/1] cd /home/jon/esp32_testing/mekaDoseSigma/build/bootloader/esp-idf/esptool_py && /home/jon/.espressif/python_env/idf5.2_py3.10_env/bin/python /home/jon/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/jon/esp32_testing/mekaDoseSigma/build/bootloader/bootloader.bin
Bootloader binary size 0x5800 bytes. 0x2800 bytes (31%) free.
[2/12] No install step for 'bootloader'
[3/12] Completed 'bootloader'
[4/12] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/game/game.cpp.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/game/game.cpp.obj 
/home/jon/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.2.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/jon/esp32_testing/mekaDoseSigma/build/config -I/home/jon/esp32_testing/mekaDoseSigma/main -I/home/jon/esp/esp-idf/components/newlib/platform_include -I/home/jon/esp/esp-idf/components/freertos/config/include -I/home/jon/esp/esp-idf/components/freertos/config/include/freertos -I/home/jon/esp/esp-idf/components/freertos/config/xtensa/include -I/home/jon/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/jon/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/jon/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/jon/esp/esp-idf/components/freertos/esp_additions/include -I/home/jon/esp/esp-idf/components/esp_hw_support/include -I/home/jon/esp/esp-idf/components/esp_hw_support/include/soc -I/home/jon/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/jon/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/jon/esp/esp-idf/components/heap/include -I/home/jon/esp/esp-idf/components/log/include -I/home/jon/esp/esp-idf/components/soc/include -I/home/jon/esp/esp-idf/components/soc/esp32s3 -I/home/jon/esp/esp-idf/components/soc/esp32s3/include -I/home/jon/esp/esp-idf/components/hal/platform_port/include -I/home/jon/esp/esp-idf/components/hal/esp32s3/include -I/home/jon/esp/esp-idf/components/hal/include -I/home/jon/esp/esp-idf/components/esp_rom/include -I/home/jon/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/jon/esp/esp-idf/components/esp_rom/esp32s3 -I/home/jon/esp/esp-idf/components/esp_common/include -I/home/jon/esp/esp-idf/components/esp_system/include -I/home/jon/esp/esp-idf/components/esp_system/port/soc -I/home/jon/esp/esp-idf/components/esp_system/port/include/private -I/home/jon/esp/esp-idf/components/xtensa/esp32s3/include -I/home/jon/esp/esp-idf/components/xtensa/include -I/home/jon/esp/esp-idf/components/xtensa/deprecated_include -I/home/jon/esp/esp-idf/components/lwip/include -I/home/jon/esp/esp-idf/components/lwip/include/apps -I/home/jon/esp/esp-idf/components/lwip/include/apps/sntp -I/home/jon/esp/esp-idf/components/lwip/lwip/src/include -I/home/jon/esp/esp-idf/components/lwip/port/include -I/home/jon/esp/esp-idf/components/lwip/port/freertos/include -I/home/jon/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/jon/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/jon/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/jon/esp/esp-idf/components/driver/include -I/home/jon/esp/esp-idf/components/driver/deprecated -I/home/jon/esp/esp-idf/components/driver/analog_comparator/include -I/home/jon/esp/esp-idf/components/driver/dac/include -I/home/jon/esp/esp-idf/components/driver/gpio/include -I/home/jon/esp/esp-idf/components/driver/gptimer/include -I/home/jon/esp/esp-idf/components/driver/i2c/include -I/home/jon/esp/esp-idf/components/driver/i2s/include -I/home/jon/esp/esp-idf/components/driver/ledc/include -I/home/jon/esp/esp-idf/components/driver/mcpwm/include -I/home/jon/esp/esp-idf/components/driver/parlio/include -I/home/jon/esp/esp-idf/components/driver/pcnt/include -I/home/jon/esp/esp-idf/components/driver/rmt/include -I/home/jon/esp/esp-idf/components/driver/sdio_slave/include -I/home/jon/esp/esp-idf/components/driver/sdmmc/include -I/home/jon/esp/esp-idf/components/driver/sigma_delta/include -I/home/jon/esp/esp-idf/components/driver/spi/include -I/home/jon/esp/esp-idf/components/driver/temperature_sensor/include -I/home/jon/esp/esp-idf/components/driver/touch_sensor/include -I/home/jon/esp/esp-idf/components/driver/twai/include -I/home/jon/esp/esp-idf/components/driver/uart/include -I/home/jon/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/jon/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/jon/esp/esp-idf/components/esp_pm/include -I/home/jon/esp/esp-idf/components/esp_ringbuf/include -I/home/jon/esp/esp-idf/components/esp_lcd/include -I/home/jon/esp/esp-idf/components/esp_lcd/interface -I/home/jon/esp/esp-idf/components/esp_timer/include -I/home/jon/esp32_testing/mekaDoseSigma/managed_components/espressif__esp_lcd_gc9a01/include -I/home/jon/esp32_testing/mekaDoseSigma/managed_components/jet/src -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=/home/jon/esp32_testing/mekaDoseSigma=. -fmacro-prefix-map=/home/jon/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fexceptions -fno-rtti -DESP_LCD_GC9A01_VER_MAJOR=2 -DESP_LCD_GC9A01_VER_MINOR=0 -DESP_LCD_GC9A01_VER_PATCH=4 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/game/game.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/game/game.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/game/game.cpp.obj -c /home/jon/esp32_testing/mekaDoseSigma/main/game/game.cpp
/home/jon/esp32_testing/mekaDoseSigma/main/game/game.cpp: In member function 'bool Game::MekaGame::init()':
/home/jon/esp32_testing/mekaDoseSigma/main/game/game.cpp:46:5: error: 'Terrain' has not been declared
   46 |     Terrain::setMapConfig(&m_mapConfig);
      |     ^~~~~~~
[5/12] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/game/mech.cpp.obj
[6/12] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp: In function 'void init_display()':
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:70:5: warning: missing initializer for member 'spi_bus_config_t::data4_io_num' [-Wmissing-field-initializers]
   70 |     };
      |     ^
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:70:5: warning: missing initializer for member 'spi_bus_config_t::data5_io_num' [-Wmissing-field-initializers]
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:70:5: warning: missing initializer for member 'spi_bus_config_t::data6_io_num' [-Wmissing-field-initializers]
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:70:5: warning: missing initializer for member 'spi_bus_config_t::data7_io_num' [-Wmissing-field-initializers]
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:70:5: warning: missing initializer for member 'spi_bus_config_t::flags' [-Wmissing-field-initializers]
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:70:5: warning: missing initializer for member 'spi_bus_config_t::isr_cpu_id' [-Wmissing-field-initializers]
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:70:5: warning: missing initializer for member 'spi_bus_config_t::intr_flags' [-Wmissing-field-initializers]
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:91:5: warning: missing initializer for member 'esp_lcd_panel_io_spi_config_t::<unnamed struct>::dc_high_on_cmd' [-Wmissing-field-initializers]
   91 |     };
      |     ^
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:91:5: warning: missing initializer for member 'esp_lcd_panel_io_spi_config_t::<unnamed struct>::dc_low_on_param' [-Wmissing-field-initializers]
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:98:5: warning: missing initializer for member 'esp_lcd_panel_dev_config_t::data_endian' [-Wmissing-field-initializers]
   98 |     };
      |     ^
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:98:5: warning: missing initializer for member 'esp_lcd_panel_dev_config_t::flags' [-Wmissing-field-initializers]
/home/jon/esp32_testing/mekaDoseSigma/main/main.cpp:98:5: warning: missing initializer for member 'esp_lcd_panel_dev_config_t::vendor_config' [-Wmissing-field-initializers]
[7/12] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/game/obstacles.cpp.obj
ninja: build stopped: subcommand failed.
